# custom-nodes

./: autoprompter.js  autoprompter_node.py  pyproject.toml  utility.js
custom nodes/comfyui-ideogram-autoprompter/: README.md  pyproject.toml  requirements.txt
custom nodes/comfyui-ideogram-autoprompter/nodes/: autoprompter_node.py  caption_schema.py  llm_local.py
custom nodes/comfyui-ideogram-autoprompter/web/js/: autoprompter.js  utility.js
custom nodes/comfyui-ideogram-guidance/: README.md  __init__.py  ideogram_dual_guider.py
